# unit_test

gmock/: CMakeLists.txt  db_interface.h  my_comp.cpp  my_comp.h  test.cpp
gtest/mathlib/: CMakeLists.txt
gtest/mathlib/include/: math.h
gtest/mathlib/src/: math.cpp
gtest/mathlib/test/: CMakeLists.txt
gtest/mathlib/test/src/: test.cpp
